--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Sedona</title>
   </head>
   <body>
     <header class="main-header">
@@ -20,47 +20,47 @@
     </header>
     <main class="container">
     	<section class="intro">
-      		<p class="visually-hidden">Welcome to the gorgeous</p>
-      		<p class="visually-hidden">Sedona</p>
-      		<p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
+    		<p class="visually-hidden">Welcome to the gorgeous</p>
+    		<p class="visually-hidden">Sedona</p>
+    		<p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
     	</section>
       <section class="advantages">
-      	<h1>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
-    	<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <h1>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item town">
             <h3>Настоящий городок</h3>
             <p>№1</p>
             <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item housing">
             <h3>Жилье</h3>
             <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item food">
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item souvenirs">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item bridge">
             <h3>Там есть мост дьявола</h3>
             <p>№2</p>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item area">
             <h3>Небольшая площадь</h3>
             <p>№3</p>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item road">
             <h3>Красивая дорога</h3>
             <p>№4</p>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item few tourists">
             <h3>Мало туристов</h3>
             <p>№5</p>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -69,9 +69,9 @@
       </section>
       <h1>Заинтересовались?</h1>
       <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  	<section class="hotel search">
-      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-      <a class="search" href="#">Поиск гостиницы в Седоне</a>
+      <button class="search">Поиск гостиницы в Седоне</button>
+      <section class="hotel search">
+        <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
           <label>Дата заезда: <input class="coming" type="coming" name="coming" placeholder="24 апреля 2017"></label>
         </p>
@@ -82,8 +82,9 @@
           <label>Взрослые <input class="adults" type="adults" name="adults" placeholder="2"></label>
           <label>Дети <input class="children" type="children" name="children" placeholder="0"></label>
         </p>
-        <a class="find" href="#">Найти</a>
-    </section>
+        <button class="find">Найти</button>
+        </form>
+      </section>
     </main>
     <footer class="main-footer">
     	<section class="hashtag">
@@ -91,15 +92,16 @@
     	</section>
     	<section class="social-button">
     	<ul>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Ютуб</a></li>
-        </ul>
-        </section>
-        <section class="footer-copyright">
-        	<p>Website by html academy</p>
-        	<img src="http://placehold.it/150x100" alt="html academy">
-      	</section>
+        <li><a class="social-button" href="#">Твиттер</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Ютуб</a></li>
+      </ul>
+      </section>
+      <section class="footer-copyright">
+      	<p>Website by</p>
+      	<a href="https://htmlacademy.ru/"><img src="http://placehold.it/150x100" alt="html academy"></a>
+      </section>
     </footer>
   </body>
 </html>
+
