--- a/inner.html
+++ b/inner.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Hotels</title>
+    <link href="css/style_inner.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="citeofsedona.png" width="135" height="70" alt="city of sedona">
+        <a class="main-header-logo" href="index.html" >
+          <img src="img/logo.png" width="140" height="70" alt="city of sedona">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -19,8 +20,9 @@
       </nav>
     </header>
     <main class="container">
+    <img src="img/hotels background.jpg" width="100%" height="507px" alt="hotels background">
     <fieldset>
-      <legend>Инфраструктура</legend>
+      <legend class="infrastructure">Инфраструктура</legend>
       <ul>
         <li class="pool">
           <label><input class="pool" type="checkbox" name="pool" checked>
@@ -72,18 +74,21 @@
     </section>
     <section class="selection">
       <ul>
-        <a href="#"><li class="amara">Amara Resort & Spa</li></a>
-        <p>Гостиница от 4000 Р.</p>
-        <button class="read more amara">Подробнее</a>
-        <button class="reservation amara">Забронировать</button>
-        <a href="#"><li class="desert">Desert Quail Inn</li></a>
-        <p>Мотель от 3000 Р.</p>
-        <button class="read more desert">Подробнее</a>
-        <button class="reservation desert">Забронировать</button>
-        <a href="#"><li class="villas">Villas at Poco Diablo</li></a>
-        <p>Апартаменты от 2000 Р.</p>
-        <button class="read more villas">Подробнее</a>
-        <button class="reservation villas">Забронировать</button>
+        <img src="img/amara.jpg" width="136px" height="89px" alt="Amara Resort & Spa">
+        <a href="#"><li class="name_of_hotels">Amara Resort & Spa</li></a>
+        <p class="total">Гостиница от 4000 Р.</p>
+        <button class="read more">Подробнее</a>
+        <button class="reservation">Забронировать</button>
+        <img src="img/Desert.jpg" width="136px" height="89px" alt="Desert Quail Inn">
+        <a href="#"><li class="name_of_hotels">Desert Quail Inn</li></a>
+        <p class="total">Мотель от 3000 Р.</p>
+        <button class="read more">Подробнее</a>
+        <button class="reservation">Забронировать</button>
+        <img src="img/villas.jpg" width="136px" height="89px" alt="Villas at Poco Diablo">
+        <a href="#"><li class="name_of_hotels">Villas at Poco Diablo</li></a>
+        <p class="total">Апартаменты от 2000 Р.</p>
+        <button class="read more">Подробнее</a>
+        <button class="reservation">Забронировать</button>
       </ul>
     </section>
     </main>
@@ -100,7 +105,7 @@
       </section>
       <section class="footer-copyright">
         <p>Website by</p>
-        <a href="https://htmlacademy.ru/"><img src="http://placehold.it/150x100" alt="html academy"></a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
       </section>
     </footer>
   </body>
