--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Sedona</title>
+    <link href="css/style_index.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="citeofsedona.png" width="135" height="70" alt="city of sedona">
+          <img src="img/logo.png" width="140" height="70" alt="city of sedona">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -20,47 +21,50 @@
     </header>
     <main class="container">
     	<section class="intro">
+        <img src="img/background.jpg" width="100%" height="513" alt="Welcome">
     		<p class="visually-hidden">Welcome to the gorgeous</p>
     		<p class="visually-hidden">Sedona</p>
     		<p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
     	</section>
       <section class="advantages">
-        <h1>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <h1 class="advantages_h1">Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="advantages_p">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item town">
+          <li class="town">
+            <img src="img/town.jpg" width="512px" height="258px" alt="town">
             <h3>Настоящий городок</h3>
             <p>№1</p>
             <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
           </li>
-          <li class="advantages-item housing">
+          <li class="housing">
             <h3>Жилье</h3>
             <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
-          <li class="advantages-item food">
+          <li class="food">
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-item souvenirs">
+          <li class="souvenirs">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
-          <li class="advantages-item bridge">
+          <li class="bridge">
+            <img src="img/mountain.jpg" width="512px" height="258px" alt="bridge">
             <h3>Там есть мост дьявола</h3>
             <p>№2</p>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
-          <li class="advantages-item area">
+          <li class="area">
             <h3>Небольшая площадь</h3>
             <p>№3</p>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item road">
+          <li class="road">
             <h3>Красивая дорога</h3>
             <p>№4</p>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item few tourists">
+          <li class="tourists">
             <h3>Мало туристов</h3>
             <p>№5</p>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -69,6 +73,7 @@
       </section>
       <h1>Заинтересовались?</h1>
       <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <img src="img/map.jpg" width="100%" height="474px" alt="town">
       <button class="search">Поиск гостиницы в Седоне</button>
       <section class="hotel search">
         <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
@@ -99,7 +104,7 @@
       </section>
       <section class="footer-copyright">
       	<p>Website by</p>
-      	<a href="https://htmlacademy.ru/"><img src="http://placehold.it/150x100" alt="html academy"></a>
+      	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
       </section>
     </footer>
   </body>
