--- a/index.html
+++ b/index.html
@@ -1,112 +1,112 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Sedona</title>
-    <link href="css/style_index.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo.png" width="140" height="70" alt="city of sedona">
-        </a>
-        <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="foto_video.html">Фото и видео</a></li>
-          <li><a href="map.html">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="container">
-    	<section class="intro">
-        <img src="img/background.jpg" width="100%" height="513" alt="Welcome">
-    		<p class="visually-hidden">Welcome to the gorgeous</p>
-    		<p class="visually-hidden">Sedona</p>
-    		<p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
-    	</section>
-      <section class="advantages">
-        <h1 class="advantages_h1">Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p class="advantages_p">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <ul class="advantages-list">
-          <li class="town">
-            <img src="img/town.jpg" width="512px" height="258px" alt="town">
-            <h3>Настоящий городок</h3>
-            <p>№1</p>
-            <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-          </li>
-          <li class="housing">
-            <h3>Жилье</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="food">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="souvenirs">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и местного производства!</p>
-          </li>
-          <li class="bridge">
-            <img src="img/mountain.jpg" width="512px" height="258px" alt="bridge">
-            <h3>Там есть мост дьявола</h3>
-            <p>№2</p>
-            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          </li>
-          <li class="area">
-            <h3>Небольшая площадь</h3>
-            <p>№3</p>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="road">
-            <h3>Красивая дорога</h3>
-            <p>№4</p>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="tourists">
-            <h3>Мало туристов</h3>
-            <p>№5</p>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
-      </section>
-      <h1>Заинтересовались?</h1>
-      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <img src="img/map.jpg" width="100%" height="474px" alt="town">
-      <button class="search">Поиск гостиницы в Седоне</button>
-      <section class="hotel search">
-        <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label>Дата заезда: <input class="coming" type="coming" name="coming" placeholder="24 апреля 2017"></label>
-        </p>
-        <p>
-          <label>Дата выезда: <input class="exit" type="exit" name="exit" placeholder="4 июля 2017"></label>
-        </p>
-        <p>
-          <label>Взрослые <input class="adults" type="adults" name="adults" placeholder="2"></label>
-          <label>Дети <input class="children" type="children" name="children" placeholder="0"></label>
-        </p>
-        <button class="find">Найти</button>
-        </form>
-      </section>
-    </main>
-    <footer class="main-footer">
-    	<section class="hashtag">
-    		<b>#VISITSEDONA</b>
-    	</section>
-    	<section class="social-button">
-    	<ul>
-        <li><a class="social-button" href="#">Твиттер</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Ютуб</a></li>
+<head>
+  <meta charset="utf-8">
+  <title>Sedona</title>
+  <link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo.png" width="140" height="70" alt="city of sedona">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="foto_video.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
-      </section>
-      <section class="footer-copyright">
-      	<p>Website by</p>
-      	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
-      </section>
-    </footer>
-  </body>
+    </nav>
+  </header>
+  <main class="container">
+   <section class="intro">
+    <img src="img/background.jpg" alt="Welcome">
+    <p class="visually-hidden">Welcome to the gorgeous</p>
+    <p class="visually-hidden">Sedona</p>
+    <p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
+  </section>
+  <section class="advantages">
+    <h1>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <p class="causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    <ul class="advantages-list">
+      <li class="town">
+        <img src="img/town.jpg" width="512" height="258" alt="town">
+        <h3>Настоящий городок</h3>
+        <p>№1</p>
+        <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+      </li>
+      <li class="housing">
+        <h3>Жилье</h3>
+        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+      </li>
+      <li class="food"> 
+        <h3>Еда</h3>
+        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </li>
+      <li class="souvenirs">
+        <h3>Сувениры</h3>
+        <p>Не только китайского, но и местного производства!</p>
+      </li>
+      <li class="bridge">
+        <img src="img/mountain.jpg" width="512" height="258" alt="bridge">
+        <h3>Там есть мост дьявола</h3>
+        <p>№2</p>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </li>
+      <li class="area">
+        <h3>Небольшая площадь</h3>
+        <p>№3</p>
+        <p>Все достопримечательности находятся очень близко</p>
+      </li>
+      <li class="road">
+        <h3>Красивая дорога</h3>
+        <p>№4</p>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </li>
+      <li class="tourists">
+        <h3>Мало туристов</h3>
+        <p>№5</p>
+        <p>Большинство едет в Гранд Каньон и толпится там</p>
+      </li>
+    </ul>
+  </section>
+  <h1>Заинтересовались?</h1>
+  <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  <a href="#" class="search">Поиск гостиницы в Седоне</a>
+  <img src="img/map.jpg" width="100%" height="474" alt="town">
+  <section class="hotel search">
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label>Дата заезда: <input class="coming" type="text" name="coming" placeholder="24 апреля 2017"></label>
+      </p>
+      <p>
+        <label>Дата выезда: <input class="exit" type="text" name="exit" placeholder="4 июля 2017"></label>
+      </p>
+      <p>
+        <label>Взрослые <input class="adults" type="text" name="adults" placeholder="2"></label>
+        <label>Дети <input class="children" type="text" name="children" placeholder="0"></label>
+      </p>
+      <button class="find">Найти</button>
+    </form>
+  </section>
+</main>
+<footer class="main-footer">
+ <section class="hashtag">
+  <b>#VISITSEDONA</b>
+</section>
+<section class="social-button">
+  <ul>
+    <li><a class="twitter" href="#">Твиттер</a></li>
+    <li><a class="facebook" href="#">Фейсбук</a></li>
+    <li><a class="youTube" href="#">Ютуб</a></li>
+  </ul>
+</section>
+<section class="footer-copyright">                
+ <p>Website by</p>
+ <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
+</section>
+</footer>
+</body>
 </html>
 
