--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
   <section class="advantages">
     <h1>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p class="causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-    <ul class="advantages-list">
+    <ul class="real city">
       <li class="town">
         <img src="img/town.jpg" width="512" height="258" alt="town">
         <h3>Настоящий городок</h3>
         <p>№1</p>
         <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </li>
+    </ul>
+    <ul class="services">
       <li class="housing">
         <h3>Жилье</h3>
         <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </li>
-      <li class="food"> 
+      <li class="food">
         <h3>Еда</h3>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </li>
@@ -48,6 +50,8 @@
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного производства!</p>
       </li>
+    </ul>
+    <ul class="privilege">
       <li class="bridge">
         <img src="img/mountain.jpg" width="512" height="258" alt="bridge">
         <h3>Там есть мост дьявола</h3>
@@ -77,6 +81,7 @@
   <img src="img/map.jpg" width="100%" height="474" alt="town">
   <section class="hotel search">
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+      <p class="visually-hidden">Поиск гостиницы в Седоне</p>
       <p>
         <label>Дата заезда: <input class="coming" type="text" name="coming" placeholder="24 апреля 2017"></label>
       </p>
@@ -95,11 +100,11 @@
  <section class="hashtag">
   <b>#VISITSEDONA</b>
 </section>
-<section class="social-button">
+<section class="social">
   <ul>
-    <li><a class="twitter" href="#">Твиттер</a></li>
-    <li><a class="facebook" href="#">Фейсбук</a></li>
-    <li><a class="youTube" href="#">Ютуб</a></li>
+    <li><a class="social-button twitter" href="#">Твиттер</a></li>
+    <li><a class="social-button facebook" href="#">Фейсбук</a></li>
+    <li><a class="social-button youtube" href="#">Ютуб</a></li>
   </ul>
 </section>
 <section class="footer-copyright">                
@@ -109,4 +114,3 @@
 </footer>
 </body>
 </html>
-
