--- a/inner.html
+++ b/inner.html
@@ -25,16 +25,13 @@
         <legend class="infrastructure">Инфраструктура</legend>
         <ul>
           <li class="pool">
-            <label><input class="pool" type="checkbox" name="pool" checked>
-            Бассейн</label>
+            <label><input class="pool" type="checkbox" name="pool" checked>Бассейн</label>
           </li>
           <li class="parking place">
-            <label><input class="parking place" type="checkbox" name="parking place">
-            Парковка</label>
+            <label><input class="parking place" type="checkbox" name="parking place">Парковка</label>
           </li>
           <li class="wi-fi">
-            <label><input class="wi-fi" type="checkbox" name="wi-fi">
-            WI-FI</label>
+            <label><input class="wi-fi" type="checkbox" name="wi-fi">WI-FI</label>
           </li>
         </ul>
       </fieldset>
@@ -42,16 +39,13 @@
         <legend>Тип жилья</legend>
         <ul>
           <li class="filter-option">
-            <label><input class="hotel" type="checkbox" name="hotel" checked>
-            Гостиница</label>
+            <label><input class="hotel" type="checkbox" name="hotel" checked>Гостиница</label>
           </li>
           <li class="filter-option">
-            <label><input class="motel" type="checkbox" name="motel" checked>
-            Мотель</label>
+            <label><input class="motel" type="checkbox" name="motel" checked>Мотель</label>
           </li>
           <li class="filter-option">
-            <label><input class="apartments" type="checkbox" name="apartments" checked>
-            Апартаменты</label>
+            <label><input class="apartments" type="checkbox" name="apartments" checked>Апартаменты</label>
           </li>
         </ul>
       </fieldset>
@@ -60,7 +54,6 @@
       <input class="slider" type="range" name="slider">
       <button type="submit" class="show">Показать</button>
     </form>
-    <img src="img/hotels background.jpg" alt="hotels background">
     <section class="sort">
       <h1>Найдено: 3</h1>
       <p>Сортировка:</p>
@@ -71,70 +64,70 @@
       </ul>
     </section>
     <section class="arrows">
-      <p class="up">&#9650;</p>
-      <p class="down">&#9660;</p>
+      <a href="#" class="up">&#9650;</a>
+      <a href="#" class="down">&#9660;</a>
     </section>
     <section class="selections">
-    <img src="img/amara.jpg" width="136" height="89" alt="Amara Resort & Spa">
-    <ul>
-      <a href="#"><li class="name_of_hotels">Amara Resort & Spa</li></a>
-      <li>Гостиница</li>
-      <li>от 4000 Р.</li>
-      <li>Рейтинг: 8,5</li>
-    </ul>
-    <ul class="stars">
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-    </ul>
-    <button class="read more">Подробнее</a>
-    <button class="reservation">Забронировать</button>
-    <img src="img/desert.jpg" width="136" height="89" alt="Desert Quail Inn">
-    <ul>
-      <a href="#"><li class="name_of_hotels">Desert Quail Inn</li></a>
-      <li>Мотель</li>
-      <li>от 3000 Р.</li>
-      <li>Рейтинг: 8,9</li>
-    </ul>
-    <ul class="stars">
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-    </ul>
-    <button class="read more">Подробнее</a>
-    <button class="reservation">Забронировать</button>
-    <img src="img/villas.jpg" width="136" height="89" alt="Villas at Poco Diablo">
-    <ul>
-      <a href="#"><li class="name_of_hotels">Villas at Poco Diablo</li></a>
-      <li>Апартаменты</li>
-      <li>от 2000 Р.</li>
-      <li>Рейтинг: 9,2</li>
-    </ul>
-    <ul class="stars">
-      <li>&#9733;</li>
-      <li>&#9733;</li>
-    </ul>
-      <button class="read more">Подробнее</a>
-      <button class="reservation">Забронировать</button>
+      <section class="amara">
+        <img src="img/amara.jpg" width="136" height="89" alt="Amara Resort & Spa">
+        <a href="#"><h1>Amara Resort & Spa</h1></a>
+        <p>Гостиница</p>
+        <p>от 4000 Р.</p>
+        <a href="#" class="read more">Подробнее</a>
+        <a href="#" class="reservation">Забронировать</a>
+        <ul class="stars">
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+        </ul>
+        <p>Рейтинг: 8,5</p>
+      </section>
+      <section class="desert">
+        <img src="img/desert.jpg" width="136" height="89" alt="Desert Quail Inn">
+        <a href="#"><h1>Desert Quail Inn</h1></a>
+        <p>Мотель</p>
+        <p>от 3000 Р.</p>
+        <a href="#" class="read more">Подробнее</a>
+        <a href="#" class="reservation">Забронировать</a>
+        <ul class="stars">
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+        </ul>
+        <p>Рейтинг: 8,9</p>
+      </section>
+      <section class="villas">
+        <img src="img/villas.jpg" width="136" height="89" alt="Villas at Poco Diablo">
+        <a href="#"><h1>Villas at Poco Diablo</h1></a>
+        <p>Апартаменты</p>
+        <p>от 2000 Р.</p>
+        <a href="#" class="read more">Подробнее</a>
+        <a href="#" class="reservation">Забронировать</a>
+        <ul class="stars">
+          <li>&#9733;</li>
+          <li>&#9733;</li>
+        </ul>
+        <p>Рейтинг: 9,2</p>
+      </section>
     </section>
   </main>
   <footer class="main-footer">
-    <section class="hashtag">
-      <b>#VISITSEDONA</b>
-    </section>
-    <section class="social-button">
-      <ul>
-        <li><a class="twitter" href="#">Твиттер</a></li>
-        <li><a class="facebook" href="#">Фейсбук</a></li>
-        <li><a class="youTube" href="#">Ютуб</a></li>
-      </ul>
-    </section>
-    <section class="footer-copyright">
-      <p>Website by</p>
-      <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
-    </section>
+  <section class="hashtag">
+    <b>#VISITSEDONA</b>
+  </section>
+  <section class="social-button">
+    <ul>
+      <li><a class="social-button twitter" href="#">Твиттер</a></li>
+      <li><a class="social-button facebook" href="#">Фейсбук</a></li>
+      <li><a class="social-button youtube" href="#">Ютуб</a></li>
+    </ul>
+  </section>
+  <section class="footer-copyright">
+    <p>Website by</p>
+    <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
+  </section>
   </footer>
 </body>
 </html>
