то, что успел сделать =)

--- a/inner.html
+++ b/inner.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>Hotels</title>
   <link href="css/style.css" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
 </head>
-<body>
+<body class="inner-page">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html" >
@@ -22,7 +23,7 @@
   <main class="container">
     <form class="value-form" action="https://echo.htmlacademy.ru" method="post">
       <fieldset>
-        <legend class="infrastructure">Инфраструктура</legend>
+        <legend>Инфраструктура</legend>
         <ul>
           <li class="pool">
             <label><input class="pool" type="checkbox" name="pool" checked>Бассейн</label>
@@ -68,12 +69,12 @@
       <a href="#" class="down">&#9660;</a>
     </section>
     <section class="selections">
-      <section class="amara">
+      <section class="pick">
         <img src="img/amara.jpg" width="136" height="89" alt="Amara Resort & Spa">
         <a href="#"><h1>Amara Resort & Spa</h1></a>
         <p>Гостиница</p>
         <p>от 4000 Р.</p>
-        <a href="#" class="read more">Подробнее</a>
+        <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
         <ul class="stars">
           <li>&#9733;</li>
@@ -84,12 +85,12 @@
         </ul>
         <p>Рейтинг: 8,5</p>
       </section>
-      <section class="desert">
+      <section class="pick">
         <img src="img/desert.jpg" width="136" height="89" alt="Desert Quail Inn">
         <a href="#"><h1>Desert Quail Inn</h1></a>
         <p>Мотель</p>
         <p>от 3000 Р.</p>
-        <a href="#" class="read more">Подробнее</a>
+        <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
         <ul class="stars">
           <li>&#9733;</li>
@@ -98,12 +99,12 @@
         </ul>
         <p>Рейтинг: 8,9</p>
       </section>
-      <section class="villas">
+      <section class="pick">
         <img src="img/villas.jpg" width="136" height="89" alt="Villas at Poco Diablo">
         <a href="#"><h1>Villas at Poco Diablo</h1></a>
         <p>Апартаменты</p>
         <p>от 2000 Р.</p>
-        <a href="#" class="read more">Подробнее</a>
+        <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
         <ul class="stars">
           <li>&#9733;</li>
