--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Sedona</title>
   <link href="css/style.css" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -20,8 +21,7 @@
     </nav>
   </header>
   <main class="container">
-   <section class="intro">
-    <img src="img/background.jpg" alt="Welcome">
+  <section class="intro">
     <p class="visually-hidden">Welcome to the gorgeous</p>
     <p class="visually-hidden">Sedona</p>
     <p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
@@ -29,57 +29,59 @@
   <section class="advantages">
     <h1>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p class="causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-    <ul class="real city">
-      <li class="town">
-        <img src="img/town.jpg" width="512" height="258" alt="town">
+    <ul class="principal">
+      <li>
+        <img src="img/town.jpg" width="800" height="258" alt="town">
         <h3>Настоящий городок</h3>
         <p>№1</p>
         <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </li>
     </ul>
     <ul class="services">
-      <li class="housing">
+      <li>
         <h3>Жилье</h3>
         <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </li>
-      <li class="food">
+      <li>
         <h3>Еда</h3>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </li>
-      <li class="souvenirs">
+      <li>
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного производства!</p>
       </li>
     </ul>
     <ul class="privilege">
-      <li class="bridge">
-        <img src="img/mountain.jpg" width="512" height="258" alt="bridge">
+      <li>
+        <img src="img/mountain.jpg" width="802" height="255" alt="bridge">
         <h3>Там есть мост дьявола</h3>
         <p>№2</p>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </li>
-      <li class="area">
+      <li>
         <h3>Небольшая площадь</h3>
         <p>№3</p>
         <p>Все достопримечательности находятся очень близко</p>
       </li>
-      <li class="road">
+      <li>
         <h3>Красивая дорога</h3>
         <p>№4</p>
         <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </li>
-      <li class="tourists">
+      <li>
         <h3>Мало туристов</h3>
         <p>№5</p>
         <p>Большинство едет в Гранд Каньон и толпится там</p>
       </li>
     </ul>
   </section>
-  <h1>Заинтересовались?</h1>
-  <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  <a href="#" class="search">Поиск гостиницы в Седоне</a>
-  <img src="img/map.jpg" width="100%" height="474" alt="town">
-  <section class="hotel search">
+  <section class="indicate">
+    <h1>Заинтересовались?</h1>
+    <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  </section>
+  <a href="#"><p class="find">Поиск гостиницы в Седоне</p></a>
+  <img src="img/map.jpg" alt="town">
+  <section class="hotelsearch">
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="visually-hidden">Поиск гостиницы в Седоне</p>
       <p>
@@ -92,7 +94,7 @@
         <label>Взрослые <input class="adults" type="text" name="adults" placeholder="2"></label>
         <label>Дети <input class="children" type="text" name="children" placeholder="0"></label>
       </p>
-      <button class="find">Найти</button>
+      <button class="seek">Найти</button>
     </form>
   </section>
 </main>
@@ -100,16 +102,16 @@
  <section class="hashtag">
   <b>#VISITSEDONA</b>
 </section>
-<section class="social">
+<section class="social-button">
   <ul>
-    <li><a class="social-button twitter" href="#">Твиттер</a></li>
-    <li><a class="social-button facebook" href="#">Фейсбук</a></li>
-    <li><a class="social-button youtube" href="#">Ютуб</a></li>
+    <li><a class="social-button-twitter" href="#"><img src="../img/twitter.svg" width="49" height="48">Твиттер</a></li>
+    <li><a class="social-button-facebook" href="#">Фейсбук</a></li>
+    <li><a class="social-button-youtube" href="#">Ютуб</a></li>
   </ul>
 </section>
 <section class="footer-copyright">                
  <p>Website by</p>
- <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
+ <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="120" height="50" alt="html academy"></a>
 </section>
 </footer>
 </body>
