--- a/inner.html
+++ b/inner.html
@@ -3,79 +3,86 @@
 <head>
   <meta charset="utf-8">
   <title>Hotels</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link href="normalize.css" rel="stylesheet">
 </head>
 <body class="inner-page">
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html" >
-        <img src="img/logo.png" width="140" height="70" alt="city of sedona">
-      </a>
+    <div class="main-navigation-wrapper">
+      <div class="container">
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
-        <li><a href="foto_video.html">Фото и видео</a></li>
-        <li><a href="map.html">Карта штата</a></li>
-        <li>Гостиницы</li>
+        <li class="list"><a href="info.html">Информация</a></li>
+        <li class="list"><a href="foto_video.html">Фото и видео</a></li>
+        <li><a href="index.html"><img src="img/logo.png" width="138" height="70" alt="city of sedona"></a>
+        <li class="list"><a href="map.html">Карта штата</a></li>
+        <li class="list">Гостиницы</li>
       </ul>
+      </div>
+    </div>
     </nav>
   </header>
-  <main class="container">
+  <main class="container-form">
     <form class="value-form" action="https://echo.htmlacademy.ru" method="post">
-      <fieldset>
+      <fieldset class="structure">
         <legend>Инфраструктура</legend>
         <ul>
-          <li class="pool">
-            <label><input class="pool" type="checkbox" name="pool" checked>Бассейн</label>
+          <li class="struct">
+            <label><input class="pool" type="checkbox" name="pool" checked><span>Бассейн</span></label>
           </li>
-          <li class="parking place">
-            <label><input class="parking place" type="checkbox" name="parking place">Парковка</label>
+          <li class="struct">
+            <label><input class="parking place" type="checkbox" name="parking place"></span>Парковка<span></label>
           </li>
-          <li class="wi-fi">
-            <label><input class="wi-fi" type="checkbox" name="wi-fi">WI-FI</label>
+          <li class="struct">
+            <label><input class="wi-fi" type="checkbox" name="wi-fi"><span>WI-FI</span></label>
           </li>
         </ul>
       </fieldset>
-      <fieldset>
+      <fieldset class="structure">
         <legend>Тип жилья</legend>
         <ul>
           <li class="filter-option">
-            <label><input class="hotel" type="checkbox" name="hotel" checked>Гостиница</label>
+            <label><input class="hotel" type="checkbox" name="hotel" checked><span>Гостиница</span></label>
           </li>
           <li class="filter-option">
-            <label><input class="motel" type="checkbox" name="motel" checked>Мотель</label>
+            <label><input class="motel" type="checkbox" name="motel" checked><span>Мотель</span></label>
           </li>
           <li class="filter-option">
-            <label><input class="apartments" type="checkbox" name="apartments" checked>Апартаменты</label>
+            <label><input class="apartments" type="checkbox" name="apartments" checked><span>Апартаменты</span></label>
           </li>
         </ul>
       </fieldset>
+      <div class="structure">
       <p>Стоимость в сутки (Р):</p>
       <input class="borders" type="text" name="borders" placeholder="От 0 до 3000">
       <input class="slider" type="range" name="slider">
       <button type="submit" class="show">Показать</button>
+      </div>
     </form>
     <section class="sort">
+      <div class="crosshead">
       <h1>Найдено: 3</h1>
       <p>Сортировка:</p>
       <ul class="sorting">
         <li><a href="price.html">По цене</a></li>
-        <li>По типу</li>
-        <li>По рейтингу</li>
+        <li class="under">По типу</li>
+        <li class="under">По рейтингу</li>
       </ul>
-    </section>
-    <section class="arrows">
       <a href="#" class="up">&#9650;</a>
       <a href="#" class="down">&#9660;</a>
     </section>
+      </div>
     <section class="selections">
       <section class="pick">
-        <img src="img/amara.jpg" width="136" height="89" alt="Amara Resort & Spa">
+        <img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
+        <div class="hot">
         <a href="#"><h1>Amara Resort & Spa</h1></a>
         <p>Гостиница</p>
         <p>от 4000 Р.</p>
         <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
+        </div>
+        <div class="rating">
         <ul class="stars">
           <li>&#9733;</li>
           <li>&#9733;</li>
@@ -84,51 +91,62 @@
           <li>&#9733;</li>
         </ul>
         <p>Рейтинг: 8,5</p>
+        </div>
       </section>
       <section class="pick">
-        <img src="img/desert.jpg" width="136" height="89" alt="Desert Quail Inn">
+        <img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn">
+        <div class="hot">
         <a href="#"><h1>Desert Quail Inn</h1></a>
         <p>Мотель</p>
         <p>от 3000 Р.</p>
         <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
+        </div>
+        <div class="rating">
         <ul class="stars">
           <li>&#9733;</li>
           <li>&#9733;</li>
           <li>&#9733;</li>
         </ul>
         <p>Рейтинг: 8,9</p>
+        </div>
       </section>
       <section class="pick">
-        <img src="img/villas.jpg" width="136" height="89" alt="Villas at Poco Diablo">
+        <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
+        <div class="hot">
         <a href="#"><h1>Villas at Poco Diablo</h1></a>
         <p>Апартаменты</p>
         <p>от 2000 Р.</p>
         <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
+        </div>
+        <div class="rating">
         <ul class="stars">
           <li>&#9733;</li>
           <li>&#9733;</li>
         </ul>
         <p>Рейтинг: 9,2</p>
+        </div>
       </section>
     </section>
   </main>
-  <footer class="main-footer">
-  <section class="hashtag">
-    <b>#VISITSEDONA</b>
-  </section>
-  <section class="social-button">
-    <ul>
-      <li><a class="social-button twitter" href="#">Твиттер</a></li>
-      <li><a class="social-button facebook" href="#">Фейсбук</a></li>
-      <li><a class="social-button youtube" href="#">Ютуб</a></li>
-    </ul>
-  </section>
-  <section class="footer-copyright">
-    <p>Website by</p>
-    <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/150x100" alt="html academy"></a>
-  </section>
-  </footer>
+<footer class="main-footer">
+<div class="container">
+<section class="hashtag">
+  <b>#VISITSEDONA</b>
+</section>
+<section class="social-button">
+  <ul>
+    <li><a class="social-button-twitter" href="#">Твиттер</a></li>
+    <li><a class="social-button-facebook" href="#">Фейсбук</a></li>
+    <li><a class="social-button-youtube" href="#">Ютуб</a></li>
+  </ul>
+</section>
+<section class="footer-copyright">                
+ <p>Website by</p>
+ <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="120" height="50" alt="html academy"></a>
+</section>
+</div>
+</footer>
 </body>
 </html>
