--- a/inner.html
+++ b/inner.html
@@ -68,17 +68,19 @@
         <li class="under">По типу</li>
         <li class="under">По рейтингу</li>
       </ul>
+      <section class="arrows">
       <a href="#" class="up">&#9650;</a>
       <a href="#" class="down">&#9660;</a>
-    </section>
+      </section>
       </div>
+    </section>
+    <hr>
     <section class="selections">
       <section class="pick">
         <img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
         <div class="hot">
         <a href="#"><h1>Amara Resort & Spa</h1></a>
-        <p>Гостиница</p>
-        <p>от 4000 Р.</p>
+        <p>Гостиница от 4000 Р.</p>
         <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
         </div>
@@ -93,12 +95,12 @@
         <p>Рейтинг: 8,5</p>
         </div>
       </section>
+      <hr>
       <section class="pick">
         <img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn">
         <div class="hot">
         <a href="#"><h1>Desert Quail Inn</h1></a>
-        <p>Мотель</p>
-        <p>от 3000 Р.</p>
+        <p>Мотель от 3000 Р.</p>
         <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
         </div>
@@ -111,12 +113,12 @@
         <p>Рейтинг: 8,9</p>
         </div>
       </section>
+      <hr>
       <section class="pick">
         <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
         <div class="hot">
         <a href="#"><h1>Villas at Poco Diablo</h1></a>
-        <p>Апартаменты</p>
-        <p>от 2000 Р.</p>
+        <p>Апартаменты от 2000 Р.</p>
         <a href="#" class="more">Подробнее</a>
         <a href="#" class="reservation">Забронировать</a>
         </div>
@@ -130,6 +132,7 @@
       </section>
     </section>
   </main>
+  <hr>
 <footer class="main-footer">
 <div class="container">
 <section class="hashtag">
