--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li class="list"><a href="foto_video.html">Фото и видео</a></li>
         <li><a><img src="img/logo.png" width="138" height="70" alt="city of sedona"></a></li>
         <li class="list"><a href="map.html">Карта штата</a></li>
-        <li class="list"><a href="hotels.html">Гостиницы</a></li>
+        <li class="list"><a href="inner.html">Гостиницы</a></li>
       </ul>
       </div>
     </div>
@@ -42,42 +42,45 @@
     </ul>
     <ul class="services">
       <li>
+        <img src="img/icon-1.svg" width="76" height="71" alt="Жилье">
         <h3>Жилье</h3>
-        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        <p>Рекомендуем пожить в настоящем <br> мотеле, все как в кино!</p>
       </li>
       <li>
+        <img src="img/icon-3.svg" width="76" height="71" alt="Еда">
         <h3>Еда</h3>
-        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <p>Всегда заказывайте фирменный бургер, <br> вы не разочаруетесь!</p>
       </li>
       <li>
+        <img src="img/icon-2.svg" width="76" height="71" alt="Сувениры">
         <h3>Сувениры</h3>
-        <p>Не только китайского, но и местного производства!</p>
+        <p>Не только китайского, но и местного <br> производства!</p>
       </li>
     </ul>
     <ul class="privilege">
       <li><img class="mount" src="img/mountain.jpg" width="800" height="256" alt="bridge">
       </li>
       <li class="diablo">
-        <h3>Там есть мост дьявола</h3>
+        <h3>Там есть <br> мост дьявола</h3>
         <p>— №2 —</p>
-        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <p>Да, по нему можно пройти! Если конечно <br> вы осмелитесь</p>
       </li>
     </ul>
     <ul class="reason">
       <li>
         <h3>Небольшая площадь</h3>
         <p>— №3 —</p>
-        <p>Все достопримечательности находятся очень близко</p>
+        <p>Все достопримечательности <br> находятся очень близко</p>
       </li>
       <li>
         <h3>Красивая дорога</h3>
         <p>— №4 —</p>
-        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        <p>Ехать в Седону из Лас-Вегаса совсем <br> не скучно!</p>
       </li>
       <li>
         <h3>Мало туристов</h3>
         <p>— №5 —</p>
-        <p>Большинство едет в Гранд Каньон и толпится там</p>
+        <p>Большинство едет в Гранд Каньон и <br> толпится там</p>
       </li>
     </ul>
   </section>
@@ -91,19 +94,33 @@
     <img src="img/map.jpg" width="1200" height="473" alt="town">
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="visually-hidden">Поиск гостиницы в Седоне</p>
-      <p>
-        <label>Дата заезда: <input class="coming" type="text" name="coming" placeholder="24 апреля 2017"></label>
-      </p>
-      <p>
-        <label>Дата выезда: <input class="exit" type="text" name="exit" placeholder="4 июля 2017"></label>
-      </p>
-      <p>
-        <label>Взрослые <input class="adults" type="text" name="adults" placeholder="2"></label>
-        <label>Дети <input class="children" type="text" name="children" placeholder="0"></label>
-      </p>
+      <div class="check-in">
+        <label for="coming"><span class="arrival">Дата заезда:</span></label>
+        <input id="coming"  type="text" name="coming" placeholder="24 апреля 2017">
+        <button class="arrival-date-input"><span class="visually-hidden">Календарь</span></button>
+      </div>
+      <div class="check-in">
+        <label for="arrival-exit"><span class="arrival">Дата выезда:</span> 
+        <input id="arrival-exit" type="text" name="exit" placeholder="4 июля 2017"></label>
+        <button class="arrival-date-input"><span class="visually-hidden">Календарь</span></button>
+      </div>
+      <div class="persons">
+        <label for="adults"><span class="arrival">Взрослые:</span></label>
+        <fieldset class="arrival-person-wrapper">
+          <button class="push minus" type="button">−</button>
+          <input id="adults" class="persons-amount" type="text" name="adults" placeholder="2">
+          <button class="push plus" type="button">+</button>
+        </fieldset>
+        <label for="shildren"><span class="childron">Дети:</span></label>
+        <fieldset class="arrival-person-wrapper">
+          <button class="push minus" type="button">−</button>
+          <input id="children" class="persons-amount" type="text" name="children" placeholder="0">
+          <button class="push plus" type="button">+</button>
+        </fieldset>
+      </div>
       <button class="seek">Найти</button>
     </form>
-    </div>
+  </div>
   </section>
 </main>
 <footer class="main-footer">
@@ -112,15 +129,15 @@
   <b>#VISITSEDONA</b>
 </section>
 <section class="social-button">
-  <ul>
-    <li><a class="social-button-twitter" href="#">Твиттер</a></li>
-    <li><a class="social-button-facebook" href="#">Фейсбук</a></li>
-    <li><a class="social-button-youtube" href="#">Ютуб</a></li>
-  </ul>
+  <div class="footer-social">
+  <a class="social-button-twitter" href="#">Twitter</a>
+  <a class="social-button-facebook" href="#">Facebook</a>
+  <a class="social-button-youtube" href="#">Youtube</a>
+  </div>
 </section>
 <section class="footer-copyright">                
  <p>Website by</p>
- <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="120" height="50" alt="html academy"></a>
+ <a href="https://htmlacademy.ru/intensive/htmlcss"><img class="footer-logo" src="img/logo-htmlacademy.svg" width="120" height="50" alt="html academy"></a>
 </section>
 </div>
 </footer>
