--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <p class="visually-hidden">"Because the Grand Canyon sucks!"</p>
     </section>
     <section class="advantages">
-      <h1>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
+      <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
       <p class="causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       <ul class="principal">
         <li class="seriosly">
-          <h3>Настоящий <br> городок</h3>
+          <h3>Настоящий городок</h3>
           <p>— №1 —</p>
-          <p>Седона - не аттракцион для туристов,<br> там течет своя жизнь</p>
+          <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
         </li>
         <li><img class="townimg" src="img/town.jpg" width="800" height="256" alt="town">
         </li>
@@ -45,17 +45,17 @@
         <li>
           <img src="img/icon-1.svg" width="76" height="71" alt="Жилье">
           <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем <br> мотеле, все как в кино!</p>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li>
           <img src="img/icon-3.svg" width="76" height="71" alt="Еда">
           <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, <br> вы не разочаруетесь!</p>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li>
           <img src="img/icon-2.svg" width="76" height="71" alt="Сувениры">
           <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного <br> производства!</p>
+          <p>Не только китайского, но и местного производства!</p>
         </li>
       </ul>
       <ul class="privilege">
@@ -64,24 +64,24 @@
         <li class="diablo">
           <h3 class="diablo-title">Там есть <br> мост дьявола</h3>
           <p>— №2 —</p>
-          <p>Да, по нему можно пройти! Если конечно <br> вы осмелитесь</p>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </li>
       </ul>
       <ul class="reason">
         <li>
-          <h3>Небольшая <br> площадь</h3>
+          <h3>Небольшая площадь</h3>
           <p class="reasp">— №3 —</p>
-          <p class="reasp">Все достопримечательности <br> находятся очень близко</p>
+          <p class="reasp">Все достопримечательности находятся очень близко</p>
         </li>
         <li>
-          <h3>Красивая <br> дорога</h3>
+          <h3>Красивая дорога</h3>
           <p class="reasp">— №4 —</p>
-          <p class="reasp">Ехать в Седону из Лас-Вегаса совсем <br> не скучно!</p>
+          <p class="reasp">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li>
-          <h3>Мало <br> туристов</h3>
+          <h3>Мало туристов</h3>
           <p class="reasp">— №5 —</p>
-          <p class="reasp">Большинство едет в Гранд Каньон и <br> толпится там</p>
+          <p class="reasp">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul>
     </section>
